--- a/src/components/movie-card/movie-card.css
+++ b/src/components/movie-card/movie-card.css
@@ -95,6 +95,8 @@
 }
 
 .film-genre {
+  display: flex;
+  flex-wrap: wrap;
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
@@ -113,7 +115,7 @@
   color: rgba(0, 0, 0, 0.65);
 
   padding: 3px;
-  margin-right: 8px;
+  margin: 2px 4px;
 
   border: 1px solid #D9D9D9;
   border-radius: 2px;
