--- a/src/components/movie-card/movie-card.css
+++ b/src/components/movie-card/movie-card.css
@@ -144,13 +144,10 @@
 
 .card-stars {
   display: flex;
-  flex-grow: 1;
+  font-size: 15px;
   justify-content: center;
-  align-items: center;
   flex-wrap: nowrap;
 
   position: relative;
-  bottom: 0;
-
-  transform: scale(0.8);
+  bottom: 5px;
 }
