--- a/src/components/search-area/search-area.css
+++ b/src/components/search-area/search-area.css
@@ -1,9 +1,7 @@
 .search-input {
-  display: flex;
-  justify-content: center;
   width: 100%;
   padding: 12px;
-  margin: 0px 36px 32px;
+  margin: 12px auto 32px auto;
   background: #FFFFFF;
   height: 40px;
   border: 1px solid #D9D9D9;
