--- a/src/components/movie-card/movie-card.css
+++ b/src/components/movie-card/movie-card.css
@@ -19,13 +19,11 @@
 }
 
 .card-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-
-  line-height: 18px;
-
   position: relative;
+
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 
   margin-bottom: 5px;
   padding: 0;
@@ -35,20 +33,22 @@
 }
 
 .card-header__title {
+  display: flex;
+  flex-wrap: wrap;
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
-  line-height: 22px;
+  line-height: 24px;
 
-  margin-right: 20px;
+  margin: 0px 20px 10px 0;
 
   color: #000000;
 }
 
 .card-header__rate {
   position: absolute;
-  right: -15px;
-  top: 0;
+  right: -13px;
+  top: -7px;
 
   display: flex;
   justify-content: center;
@@ -80,10 +80,6 @@
   line-height: 12px;
 
   color: #000000;
-}
-
-.card-content {
-  justify-content: space-between;
 }
 
 .movie-date {
@@ -150,4 +146,56 @@
 
   position: relative;
   bottom: 5px;
+}
+
+
+@media (max-width: 768px) {
+  .left-part {
+    position: absolute;
+  }
+
+  .right-part {
+    position: relative;
+    min-width: 100%;
+    padding: 0;
+  }
+
+  .image-box {
+    width: 60px;;
+    overflow: hidden;
+    margin-right: 13px;
+  }
+
+  .card-img {
+    width: 100%;
+    height: 91px;
+  }
+
+  .card-header {
+    left: 75px;
+    width: 80%;
+    min-height: 95px;
+  }
+
+  .card-header__title {
+    font-weight: 400;
+    margin: 0 30px 10px 0;
+  }
+
+  .card-header__rate {
+    right: -3px;
+    top: -2px;
+  }
+
+  .movie-description {
+    margin-bottom: 5px;
+
+  }
+
+  .card-stars {
+    font-size: 16px;
+    right: -18%;
+    bottom: 10px;
+  }
+
 }
