--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,9 @@
   box-sizing: border-box;
   font-family: 'Inter';
 
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+  -webkit-tap-highlight-color: transparent;
+
   -ms-overflow-style: none;
   overflow: -moz-scrollbars-none;
 }
