--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -13,6 +13,12 @@
   font-size: 14px;
 }
 
+.main .spinner {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .footer {
   text-align: center;
   margin: 10px auto 20px;
