--- a/src/components/movie-card/movie-card.css
+++ b/src/components/movie-card/movie-card.css
@@ -3,12 +3,14 @@
 }
 
 .image-box {
+  width: 183px;
+  height: 281px;
   overflow: hidden;
 }
 
 .card-img {
   width: 100%;
-  height: 281px;
+  height: 100%;
 }
 
 .right-part {
