--- a/src/components/search-area/search-area.css
+++ b/src/components/search-area/search-area.css
@@ -7,3 +7,9 @@
   border: 1px solid #D9D9D9;
   border-radius: 4px;
 }
+
+@media (max-width: 768px) {
+  .search-input {
+    margin: 10px auto 10px auto;
+  }
+}
